add controller unit tests